--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			
 			<a id="logoname" href="./" style="text-decoration: none; color: white; margin: 0 2px 0px 8px;">
 				<span data-translate="logo-header">
-					<span id="qos">V</span>DO.Ninja 
+					Phil's <span id="qos">V</span>DO.Ninja 
 				</span>
 			</a>
 			<div id="head1">
