--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
 			</div>
 			
 			<p></p>
-			<div id="info" class="fullcolumn columnfade">
+			<!--div id="info" class="fullcolumn columnfade">
 				<center>
 					<div class="infoblob" align="left">
 						<span data-translate="info-blob">
@@ -937,7 +937,7 @@
 						</span>
 					</div>
 				</center>
-			</div>
+			</div-->
 			<form method="post" onsubmit="setFormSubmitting()" style="display: none;">
 				<input type="submit" />
 			</form>
